Rebuild project.